# httpolars

./: Cargo.toml  pyproject.toml  run.py
httpolars/: __init__.py
httpolars/test_utils/: rate_limit_server.py
python/httpolars/: __init__.py
python/httpolars/test_utils/: rate_limit_server.py
src/: api.rs  expressions.rs  lib.rs
tests/: conftest.py  test_api_call.py  test_client.py  test_pig_latinnify.py  test_server.py  test_tutorial_plugins.py
