[package]
name = "httpolars"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module", "abi3-py38", "gil-refs"] }
pyo3-polars = { version = "0.13.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.39.2", default-features = false }
reqwest = { version = "0.12.4", features = ["blocking"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.30"

[lib]
name = "_lib"
crate-type= ["cdylib"]
path = "src/lib.rs"

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }

