[build-system]
requires = ["maturin>=1.0,<2.0", "polars>=0.20.6"]
build-backend = "maturin"

[project]
name = "httpolars"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.pdm.dev-dependencies]
development = [
    "maturin[patchelf]>=1.5.1",
]
test = [
    "pytest>=8.2.1",
    "inline-snapshot>=0.10.2",
    "fastapi>=0.111.0",
    "slowapi>=0.1.9",
]
